--- a/pharmacy-spa/package.json
+++ b/pharmacy-spa/package.json
@@ -22,15 +22,19 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tinymce/tinymce-react": "^5.0.1",
     "@vidstack/react": "^0.6.15",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "bootstrap": "^5.3.3",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router": "^6.23.0",
     "react-router-dom": "^6.23.0",
+    "react-tilt": "^1.0.2",
     "vidstack": "^0.6.15"
   },
   "devDependencies": {
